[gd_scene load_steps=15 format=3 uid="uid://cov8ueai4yxxo"]

[ext_resource type="Script" path="res://src/levels/generation_test/EndlessGame.gd" id="1_dtic3"]
[ext_resource type="PackedScene" uid="uid://c2ibjq5ieypqd" path="res://src/player/Player.tscn" id="2_j3qwk"]
[ext_resource type="TileSet" uid="uid://b1ro8bf3hg42k" path="res://src/levels/test_TS.tres" id="2_wt12b"]
[ext_resource type="Script" path="res://src/levels/generation_test/centerCamera.gd" id="3_44hyi"]
[ext_resource type="PackedScene" uid="uid://lqbj6fvsrbnq" path="res://src/levels/generation_test/baseChunk.tscn" id="3_jpiwq"]
[ext_resource type="SpriteFrames" uid="uid://b6nvoojknaex7" path="res://src/levels/generation_test/laser.tres" id="4_f3ti0"]
[ext_resource type="Script" path="res://src/Screens/BGColor.gd" id="6_5a2hq"]
[ext_resource type="Texture2D" uid="uid://d3r4rbb0qcf6c" path="res://assets/interface/buttonBG.png" id="6_qp0ci"]
[ext_resource type="Texture2D" uid="uid://d3nyt16n3se2p" path="res://assets/interface/buttonBGClicked.png" id="7_oebgf"]
[ext_resource type="LabelSettings" uid="uid://bwanrr2igi5cs" path="res://src/Screens/interfaceFont.tres" id="8_wdlsl"]
[ext_resource type="Texture2D" uid="uid://7c5exaqy3jdc" path="res://assets/interface/pause_button.png" id="10_4716b"]
[ext_resource type="AudioStream" uid="uid://bycgrnvxt5p6p" path="res://assets/music/Clement Panchout - Sweet 70s.wav" id="11_gger5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gi1pw"]
size = Vector2(341.5, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ea6s8"]
size = Vector2(321, 3.5)

[node name="EndlessGame" type="Node2D"]
script = ExtResource("1_dtic3")

[node name="player" parent="." instance=ExtResource("2_j3qwk")]
position = Vector2(134, 616)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(135, 324)
limit_bottom = 648
script = ExtResource("3_44hyi")

[node name="Area2D" type="Area2D" parent="Camera2D"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Area2D"]
position = Vector2(-4, 309)
shape = SubResource("RectangleShape2D_gi1pw")

[node name="laser" type="AnimatedSprite2D" parent="Camera2D/Area2D"]
texture_filter = 1
position = Vector2(1, 309)
sprite_frames = ExtResource("4_f3ti0")
autoplay = "default"
frame_progress = 0.647622

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = ExtResource("2_wt12b")
format = 2
layer_0/tile_data = PackedInt32Array(2555920, 131074, 4, 2555919, 65538, 4, 2555918, 65538, 4, 2555917, 65538, 4, 2555916, 65538, 4, 2555915, 65538, 4, 2555914, 65538, 4, 2555913, 65538, 4, 2555912, 65538, 4, 2555911, 65538, 4, 2555910, 65538, 4, 2555909, 65538, 4, 2555908, 65538, 4, 2555907, 65538, 4, 2555906, 65538, 4, 2555905, 65538, 4, 2555904, 2, 4, 2621440, 2, 0, 2621441, 2, 0, 2621442, 2, 0, 2621443, 2, 0, 2621444, 2, 0, 2621445, 2, 0, 2621446, 2, 0, 2621447, 2, 0, 2621448, 2, 0, 2621449, 2, 0, 2490384, 131074, 3, 2424848, 131074, 3, 2359312, 131074, 3, 2293776, 131074, 3, 2228240, 131074, 3, 2228224, 2, 3, 2293760, 2, 3, 2359296, 2, 3, 2424832, 2, 3, 2490368, 2, 3, 1769488, 131074, 3, 1835024, 131074, 3, 1900560, 131074, 3, 1966096, 131074, 3, 2031632, 131074, 3, 2097168, 131074, 3, 2162704, 131074, 3, 1638400, 2, 3, 1703936, 2, 3, 1769472, 2, 3, 1835008, 2, 3, 1900544, 2, 3, 1966080, 2, 3, 2031616, 2, 3, 2097152, 2, 3, 2162688, 2, 3, 1638416, 131074, 3, 1703952, 131074, 3, 1114128, 131074, 3, 1179664, 131074, 3, 1245200, 131074, 3, 1310736, 131074, 3, 1376272, 131074, 3, 1441808, 131074, 3, 1507344, 131074, 3, 1572880, 131074, 3, 1114112, 2, 3, 1179648, 2, 3, 1245184, 2, 3, 1310720, 2, 3, 1376256, 2, 3, 1441792, 2, 3, 1507328, 2, 3, 1572864, 2, 3, 393232, 131074, 3, 458768, 131074, 3, 524304, 131074, 3, 589840, 131074, 3, 655376, 131074, 3, 720912, 131074, 3, 786448, 131074, 3, 851984, 131074, 3, 917520, 131074, 3, 983056, 131074, 3, 1048592, 131074, 3, 393216, 2, 3, 458752, 2, 3, 524288, 2, 3, 589824, 2, 3, 655360, 2, 3, 720896, 2, 3, 786432, 2, 3, 851968, 2, 3, 917504, 2, 3, 983040, 2, 3, 1048576, 2, 3, 16, 131074, 3, 65552, 131074, 3, 131088, 131074, 3, 196624, 131074, 3, 262160, 131074, 3, 327696, 131074, 3, 0, 2, 3, 65536, 2, 3, 131072, 2, 3, 196608, 2, 3, 262144, 2, 3, 327680, 2, 3, 6, 262146, 1, 7, 262146, 1, 8, 262146, 1, 9, 262146, 1, 10, 262146, 1, 11, 262146, 1, 2621456, 2, 0, 2621455, 2, 0, 2621454, 2, 0, 2621453, 2, 0, 2621452, 2, 0, 2621451, 2, 0, 2621450, 2, 0, 15, 262146, 1, 14, 262146, 1, 13, 262146, 1, 12, 262146, 1, 5, 262146, 1, 4, 262146, 1, 3, 262146, 1, 2, 262146, 1, 1, 262146, 1, 524303, 262146, 1, 524302, 262146, 1, 524301, 262146, 1, 524300, 262146, 1, 524299, 262146, 1, 524298, 262146, 1, 524297, 262146, 1, 524296, 262146, 1, 524295, 262146, 1, 524294, 262146, 1, 524293, 262146, 1, 524292, 262146, 1, 524291, 262146, 1, 524290, 262146, 1, 524289, 262146, 1, 2031625, 2, 1, 2031626, 65538, 1, 2031627, 65538, 1, 2031628, 131074, 1, 1507335, 131074, 1, 1507334, 65538, 1, 1507333, 65538, 1, 1507332, 2, 1, 983055, 262146, 1, 983054, 262146, 1, 983053, 262146, 1, 983052, 262146, 1, 983051, 262146, 1, 983050, 262146, 1, 983048, 262146, 1, 983047, 262146, 1, 983046, 262146, 1, 983045, 262146, 1, 983044, 262146, 1, 983043, 262146, 1, 983042, 262146, 1, 983041, 262146, 1, 983049, 262146, 1)

[node name="debug" type="CanvasLayer" parent="."]

[node name="debug" type="Control" parent="debug"]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="debug/debug"]
layout_mode = 0
offset_left = 200.916
offset_right = 240.916
offset_bottom = 14.0
text = "on floor"

[node name="Label2" type="Label" parent="debug/debug"]
layout_mode = 0
offset_left = 200.916
offset_top = 14.0
offset_right = 240.916
offset_bottom = 28.0
text = "0"

[node name="Label3" type="Label" parent="debug/debug"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0
text = "acc x:"

[node name="Label4" type="Label" parent="debug/debug"]
layout_mode = 0
offset_left = 40.0
offset_right = 80.0
offset_bottom = 14.0

[node name="Label5" type="Label" parent="debug/debug"]
layout_mode = 0
offset_left = 203.166
offset_top = 29.7452
offset_right = 243.166
offset_bottom = 43.7452

[node name="Label6" type="Label" parent="debug/debug"]
layout_mode = 0
offset_left = 1.0
offset_top = 22.0
offset_right = 41.0
offset_bottom = 45.0

[node name="endScreen" type="ColorRect" parent="debug"]
visible = false
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(100, 150)
script = ExtResource("6_5a2hq")

[node name="BGColor2" type="ColorRect" parent="debug/endScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.5
offset_top = -147.5
offset_right = 97.5
offset_bottom = 147.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="debug/endScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -103.0
offset_right = 62.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 2
text = "Try again"
label_settings = ExtResource("8_wdlsl")

[node name="Button" type="TextureButton" parent="debug/endScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -32.0
offset_right = 64.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_qp0ci")
texture_pressed = ExtResource("7_oebgf")

[node name="Label" type="Label" parent="debug/endScreen/Button"]
layout_mode = 0
offset_left = 19.0
offset_top = 21.0
offset_right = 110.0
offset_bottom = 44.0
text = "Restart"
label_settings = ExtResource("8_wdlsl")

[node name="backButton" type="TextureButton" parent="debug/endScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 52.0
offset_right = 64.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_qp0ci")
texture_pressed = ExtResource("7_oebgf")

[node name="Label" type="Label" parent="debug/endScreen/backButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -11.5
offset_right = 26.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "back"
label_settings = ExtResource("8_wdlsl")

[node name="score" type="ColorRect" parent="debug"]
z_index = 1
offset_right = 270.0
offset_bottom = 71.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="debug/score"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0814815
anchor_top = 0.929577
anchor_right = 0.0814815
anchor_bottom = 0.929577
offset_top = -23.0
offset_right = 80.0
grow_vertical = 0
text = "score:"
label_settings = ExtResource("8_wdlsl")
metadata/_edit_use_anchors_ = true

[node name="scoreUpdate" type="Label" parent="debug/score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 5.5
offset_right = 8.0
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
text = "0
"
label_settings = ExtResource("8_wdlsl")

[node name="Label2" type="Label" parent="debug/score"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="pause" type="TextureButton" parent="debug"]
z_index = 1
offset_left = 222.0
offset_top = 25.0
offset_right = 262.0
offset_bottom = 65.0
size_flags_horizontal = 8
texture_normal = ExtResource("10_4716b")

[node name="pauseScreen" type="ColorRect" parent="debug"]
visible = false
z_index = 1
offset_left = 35.0
offset_top = 174.0
offset_right = 235.0
offset_bottom = 474.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(100, 150)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("6_5a2hq")

[node name="BGColor" type="ColorRect" parent="debug/pauseScreen"]
layout_mode = 0
offset_left = 2.5
offset_top = 2.5
offset_right = 197.5
offset_bottom = 297.5
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="debug/pauseScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_top = 21.0
offset_right = 93.0
offset_bottom = 64.0
grow_horizontal = 2
text = "Paused"
label_settings = ExtResource("8_wdlsl")
horizontal_alignment = 1

[node name="Button2" type="TextureButton" parent="debug/pauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -14.0
offset_right = 64.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_qp0ci")
texture_pressed = ExtResource("7_oebgf")

[node name="Label" type="Label" parent="debug/pauseScreen/Button2"]
layout_mode = 0
offset_left = 19.0
offset_top = 21.0
offset_right = 110.0
offset_bottom = 44.0
text = "Restart"
label_settings = ExtResource("8_wdlsl")

[node name="backButton2" type="TextureButton" parent="debug/pauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_qp0ci")
texture_pressed = ExtResource("7_oebgf")

[node name="Label" type="Label" parent="debug/pauseScreen/backButton2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -11.5
offset_right = 26.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "back"
label_settings = ExtResource("8_wdlsl")

[node name="resume" type="TextureButton" parent="debug/pauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -91.0
offset_right = 64.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_qp0ci")
texture_pressed = ExtResource("7_oebgf")

[node name="Label" type="Label" parent="debug/pauseScreen/resume"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -11.5
offset_right = 26.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "resume"
label_settings = ExtResource("8_wdlsl")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_gger5")
autoplay = true

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(135, 324)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(7, -102.75)
shape = SubResource("RectangleShape2D_ea6s8")

[node name="base" parent="." instance=ExtResource("3_jpiwq")]

[connection signal="body_entered" from="Camera2D/Area2D" to="Camera2D" method="_on_area_2d_body_entered"]
[connection signal="pressed" from="debug/endScreen/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="debug/endScreen/backButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="debug/pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="debug/pauseScreen/Button2" to="." method="_on_button_pressed"]
[connection signal="pressed" from="debug/pauseScreen/backButton2" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="debug/pauseScreen/resume" to="." method="_on_resume_pressed"]
[connection signal="body_entered" from="Area2D2" to="Camera2D" method="_on_area_2d_2_body_entered"]
